[gd_scene load_steps=16 format=3 uid="uid://dq15sq80eegsp"]

[ext_resource type="Script" path="res://scripts/nest.gd" id="1_x6bmq"]
[ext_resource type="Texture2D" uid="uid://csonx7xhpxl3d" path="res://sprites/game/Pancake.png" id="2_vywcg"]
[ext_resource type="SpriteFrames" uid="uid://ck4me0e4ejrtc" path="res://assets/NestHead.tres" id="3_xicmg"]
[ext_resource type="Material" uid="uid://dinl44txoreke" path="res://assets/particles/PancakeChunks.tres" id="4_m4ehk"]
[ext_resource type="Texture2D" uid="uid://cmptl1grknjcj" path="res://sprites/particles/DroneParts4.png" id="5_yo36e"]
[ext_resource type="Texture2D" uid="uid://boxxiyfroiysq" path="res://sprites/particles/DroneParts5.png" id="6_0d8t6"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_psqdy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q8yn4"]
radius = 9.33333

[sub_resource type="Animation" id="Animation_u16p6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_whqfq"]
resource_name = "swayLeft"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [0.383972, -0.383972, 0.383972, 0.0]
}

[sub_resource type="Animation" id="Animation_dit3g"]
resource_name = "swayRight"
length = 2.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(-2, -2, -2, 1),
"update": 0,
"values": [-0.383972, 0.383972, -0.383972, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xqufd"]
_data = {
"RESET": SubResource("Animation_u16p6"),
"swayLeft": SubResource("Animation_whqfq"),
"swayRight": SubResource("Animation_dit3g")
}

[sub_resource type="Animation" id="Animation_crw6w"]
resource_name = "Headpop"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone/Head1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone/Head2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drone/Head3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Drone/Head1:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drone/Head2:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone/Head3:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1, 1.1, 1.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"headpop"
}, {
"args": [],
"method": &"headpop"
}, {
"args": [],
"method": &"headpop"
}, {
"args": [],
"method": &"headpop"
}]
}

[sub_resource type="Animation" id="Animation_uk0ei"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone/Head1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone/Head2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drone/Head3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Drone/Head1:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drone/Head2:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone/Head3:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m43xy"]
_data = {
"Headpop": SubResource("Animation_crw6w"),
"RESET": SubResource("Animation_uk0ei")
}

[node name="Drone" type="Node2D"]
light_mask = 3
z_index = -1
texture_filter = 1
material = SubResource("CanvasItemMaterial_psqdy")
position = Vector2(0, 18)
scale = Vector2(0.75, 0.75)
script = ExtResource("1_x6bmq")

[node name="Drone" type="Sprite2D" parent="."]
light_mask = 3
use_parent_material = true
position = Vector2(0, -17.3333)
texture = ExtResource("2_vywcg")
offset = Vector2(0, 31.3333)

[node name="ParachuteFall" type="Area2D" parent="Drone"]
position = Vector2(0, 17.3333)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drone/ParachuteFall"]
position = Vector2(0, 10.6666)
shape = SubResource("CircleShape2D_q8yn4")

[node name="Head1" type="AnimatedSprite2D" parent="Drone"]
visible = false
position = Vector2(0, 40.5)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("3_xicmg")
animation = &"PopOut"
offset = Vector2(0, -7.99997)

[node name="Crumbs" type="Node2D" parent="Drone/Head1"]
position = Vector2(0, -10.5)

[node name="Crumbs1" type="GPUParticles2D" parent="Drone/Head1/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("5_yo36e")
one_shot = true
explosiveness = 1.0

[node name="Crumbs2" type="GPUParticles2D" parent="Drone/Head1/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("6_0d8t6")
one_shot = true
explosiveness = 1.0

[node name="Head2" type="AnimatedSprite2D" parent="Drone"]
visible = false
position = Vector2(0, 40.5)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("3_xicmg")
animation = &"PopOut"
offset = Vector2(0, -7.99997)

[node name="Crumbs" type="Node2D" parent="Drone/Head2"]
position = Vector2(0, -10.5)

[node name="Crumbs1" type="GPUParticles2D" parent="Drone/Head2/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("5_yo36e")
one_shot = true
explosiveness = 1.0

[node name="Crumbs2" type="GPUParticles2D" parent="Drone/Head2/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("6_0d8t6")
one_shot = true
explosiveness = 1.0

[node name="Head3" type="AnimatedSprite2D" parent="Drone"]
visible = false
position = Vector2(0, 40.5)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("3_xicmg")
animation = &"PopOut"
offset = Vector2(0, -7.99997)

[node name="Crumbs" type="Node2D" parent="Drone/Head3"]
position = Vector2(0, -10.5)

[node name="Crumbs1" type="GPUParticles2D" parent="Drone/Head3/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("5_yo36e")
one_shot = true
explosiveness = 1.0

[node name="Crumbs2" type="GPUParticles2D" parent="Drone/Head3/Crumbs"]
emitting = false
amount = 2
process_material = ExtResource("4_m4ehk")
texture = ExtResource("6_0d8t6")
one_shot = true
explosiveness = 1.0

[node name="Animate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xqufd")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m43xy")
}
autoplay = "Headpop"

[connection signal="area_entered" from="Drone/ParachuteFall" to="." method="_on_parachute_fall_area_entered"]
